get parameters from request